[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/world/items/flomb_projectile.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 150.0

[node name="FlombProjectile" type="Area2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="velocity" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 0

[node name="acceleration" type="RayCast2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 0

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Flomb_body_entered"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_body_entered"]
[connection signal="body_exited" from="ExplosionArea" to="." method="_on_ExplosionArea_body_exited"]
